<resources>
    <string name="app_name">Wanandroid</string>
    <string name="tranname">AnimaText</string>
    <string name="headname">啦啦啦</string>
    <string name="setting">设置</string>
    <string name="my_collect">收藏</string>
    <string name="about_us">关于我们</string>
    <string name="logout">退出登录</string>
    <string name="bye_burger_bottom_behavior">com.wingsofts.byeburgernavigationview.ByeBurgerBottomBehavior</string>
    <string name="home_pager">主页</string>
    <string name="navigation">导航</string>
    <string name="project">项目</string>
    <string name="wx_article">公众号</string>
    <string name="knowledge_hierarchy">知识</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="search_text">搜索</string>
    <string name="search_hot_text">热搜</string>
    <string name="search_clear">清除</string>
    <string name="search_history">搜索历史</string>

</resources>
