<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/other">
        <item
            android:id="@+id/nav_item_wan_android"
            android:checkable="true"
            android:checked="true"
            android:icon="@drawable/head_log"
            android:title="@string/app_name"/>

        <item
            android:id="@+id/nav_item_my_collect"
            android:checkable="true"
            android:icon="@drawable/star_filled"
            android:title="@string/my_collect"/>

        <item
            android:id="@+id/nav_item_setting"
            android:checkable="true"
            android:icon="@drawable/setting"
            android:title="@string/setting"/>

        <item
            android:id="@+id/nav_item_about_us"
            android:checkable="true"
            android:icon="@drawable/about_us"
            android:title="@string/about_us"/>

        <item
            android:id="@+id/nav_item_logout"
            android:checkable="true"
            android:icon="@drawable/log_out"
            android:title="@string/logout"/>
    </group>
</menu>