<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".ui.search.SearchMvpActivity">
    <RelativeLayout
        android:padding="2dp"
        android:id="@+id/search_rl"
        android:gravity="center_vertical"
        android:layout_width="match_parent"
        android:layout_height="42dp">
        <android.support.v7.widget.AppCompatImageView
            android:id="@+id/search_back_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            app:srcCompat="@mipmap/ic_img_back"/>
        <android.support.v7.widget.SearchView
            android:id="@+id/search_view"
            android:clickable="true"
            android:layout_toEndOf="@+id/search_back_img"
            android:layout_toStartOf="@+id/search_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.SearchView>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_text"
            android:layout_marginStart="15dp"
            android:layout_marginEnd="15dp"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_text"/>
    </RelativeLayout>
    <android.support.v7.widget.AppCompatTextView
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginStart="15dp"
        android:id="@+id/search_hot"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search_hot_text"/>

    <com.zhy.view.flowlayout.TagFlowLayout
        android:id="@+id/hot_flow"
        android:layout_width="match_parent"
        android:layout_height="200dp"></com.zhy.view.flowlayout.TagFlowLayout>
    <android.support.v7.widget.RecyclerView
        android:visibility="gone"
        android:id="@+id/hot_rv"
        android:layout_width="match_parent"
        android:layout_height="200dp"/>
    <RelativeLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="40dp">
        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history"/>
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/search_clear"
            android:layout_alignParentEnd="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_clear"
            />
    </RelativeLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/serach_history_rv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>
</LinearLayout>